# Neural-Network-based-OCR

./: .gitignore  CMakeLists.txt  LICENSE  NeuralNetworkComputation.sln  README.md
.github/workflows/: ci.yml
NeuralNetworkComputation/: NN.cpp  NN.h  NeuralNetworkComputation.vcxproj  NeuralNetworkComputation.vcxproj.filters  OpenCV_Debug.props  README.txt  Source.cpp  Source.h  TrainerGUI.cpp  TrainingUI.h
NeuralNetworkComputation/Debug/NeuralNe.F58C9DD2.tlog/: CL.read.1.tlog  CL.write.1.tlog  NeuralNetworkComputation.lastbuildstate  cl.command.1.tlog
NeuralNetworkComputation/Release/NeuralNe.F58C9DD2.tlog/: CL.read.1.tlog  CL.write.1.tlog  NeuralNetworkComputation.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NeuralNetworkComputation/x64/Debug/NeuralNe.F58C9DD2.tlog/: CL.read.1.tlog  CL.write.1.tlog  NeuralNetworkComputation.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NeuralNetworkComputation/x64/Release/NeuralNe.F58C9DD2.tlog/: CL.read.1.tlog  CL.write.1.tlog  NeuralNetworkComputation.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
